# wow_vanilla_server

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  config.toml  config.toml.example  unadded_locations.txt
.cargo/: config.toml
benches/: hot_loops.rs
src/: auth.rs  config.rs  lib.rs  main.rs  numeric.rs  snapshot.rs
src/loadtest/: main.rs  protocol.rs
src/loadtest/orchestrator/: mod.rs
src/loadtest/worker/: auth.rs  bot.rs  metrics.rs  mod.rs  movement.rs  pvp.rs  world.rs
src/loadtest/worker/bot/: race.rs
src/world/: aoi.rs  cell.rs  command.rs  mod.rs  net_stats.rs  region.rs  spatial.rs  update_object.rs  world_db.rs
src/world/character_screen_handler/: char_create.rs  mod.rs
src/world/database/: mod.rs
src/world/world/: mod.rs  pathfinding_maps.rs
src/world/world/client/: character_screen_client.rs  mod.rs  test_support.rs
src/world/world_opcode_handler/: character.rs  chat.rs  combat.rs  creature.rs  entities.rs  inventory.rs  item.rs  mod.rs  opcode_handler.rs  simulated_player.rs  spell.rs
src/world/world_opcode_handler/gm_command/: mod.rs  parser.rs
