[package]
name = "wow_vanilla_server"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
# When set, every outgoing/incoming opcode is serialized to a test-case string
# and appended to `tests.wowm` (or the matching wowm source). Useful for
# expanding the wow_messages crate's test corpus from a live session, but
# walks `../wow_messages` per packet — never enable in a production build.
wowm-capture = []

[dependencies]
tokio = { version = "1.52.3", features = [
    "net",
    "sync",
    "time",
    "io-util",
    "io-std",
    "macros",
    "rt-multi-thread",
    "signal",
] }
wow_login_messages = { git="https://github.com/gtker/wow_messages.git", rev = "e8dc643aea0647083e5f5a1fa6d2c5e4fb274d08", features = ["tokio"] }
wow_world_messages = { git="https://github.com/gtker/wow_messages.git", rev = "e8dc643aea0647083e5f5a1fa6d2c5e4fb274d08", features = ["sync", "tokio", "vanilla", "print-testcase"] }
wow_world_base = { git="https://github.com/gtker/wow_messages.git", rev = "e8dc643aea0647083e5f5a1fa6d2c5e4fb274d08", features = ["extended", "vanilla", "serde"] }
wow_items = { git="https://github.com/gtker/wow_messages.git", rev = "e8dc643aea0647083e5f5a1fa6d2c5e4fb274d08", features = ["vanilla"] }
wow_srp = { git="https://github.com/gtker/wow_srp.git", rev = "9c5382a2915850efc69f05d7985ab06b3ec13163" }
walkdir = "2.5.0"

rustigator = { git = "https://github.com/12932/rustigator", rev = "fc4528309f22ab70cd47bebdf4deae2e5b4b1cd5", features = ["vanilla"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
ahash = "0.8.12"
tracing-tracy = { version = "0.11.4", default-features = false, features = [
    "enable",
    "system-tracing",
    "sampling",
    "callstack-inlines",
    "manual-lifetime",
] }
rayon = "1.12.0"
slab = "0.4.12"
tracy-client = { version = "0.18.4", default-features = false, features = [
    "enable",
    "system-tracing",
    "sampling",
    "callstack-inlines",
    "manual-lifetime",
] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
clap = { version = "4.6.1", features = ["derive"] }
rand = "0.10.1"
dotenvy = "0.15.7"
gethostname = "1.1.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde"] }
kanal = "0.1.1"
arc-swap = "1.7.1"
mimalloc = { version = "0.1", default-features = false }
smallvec = "1.13"

[[bin]]
name = "wow_vanilla_server"
path = "src/main.rs"

[[bin]]
name = "loadtest"
path = "src/loadtest/main.rs"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["async_tokio", "html_reports"] }
rand = "0.10.1"

[[bench]]
name = "hot_loops"
harness = false

[profile.release]
debug = 0
# Thin LTO + single codegen unit lets the compiler inline across module
# boundaries — important for hot paths like `within_aoi` called from
# inside `broadcast_opcode_within_aoi`, and `OutboundTx::try_send`
# called from the broadcast loop. Builds get noticeably slower (~2–3×)
# but only for `--release` / bench.
lto = "thin"
codegen-units = 1
panic = "abort"
